Replaced Tuple with Pair